2007-12-06  Dieter Lunn <coder2000@gmail.com> 

	* Added MD5 processor.  Currently not being created for some reason.

2007-12-04  Dieter Lunn <coder2000@gmail.com> 

	* Continued work on SASL

2007-11-26  Dieter Lunn <coder2000@gmail.com> 

	* Added a lot of missing comments.  Still have to fill in the text but at least the compiler won't complain as much.

2007-11-10  Dieter Lunn <coder2000@gmail.com> 

	* Moved logging to static class in Logger.cs

2007-11-07  Dieter Lunn <coder2000@gmail.com> 
* removed incompatible stringprep dll from library and replaced it with libidn.
	

2007-11-01  Dieter Lunn <coder2000@gmail.com> 
* Working on getting SSL working with the new state model.
	

2007-11-01  Dieter Lunn <coder2000@gmail.com> 

	

2007-11-01  Dieter Lunn <coder2000@gmail.com> 

	
