@@ -1,4 +1,4 @@
-//XMPP .NET Library Copyright (C) 2006 Dieter Lunn
+//XMPP .NET Library Copyright (C) 2006, 2007 Dieter Lunn
 //
 //This library is free software; you can redistribute it and/or modify it under
 //the terms of the GNU Lesser General Public License as published by the Free
@@ -225,7 +225,9 @@ namespace xmpp
 		private void EndTag()
 		{
             if (_reader.Name == "stream:stream")
-            {
+			{
+				//Logger.Debug(this, "Returning start stream");
+				//OnElement(_elem);
                 return;
             }
 
