@@ -63,6 +63,7 @@
     <File name="common/SASL/MD5Processor.cs" subtype="Code" buildaction="Compile" />
     <File name="core/SASL/Challenge.cs" subtype="Code" buildaction="Compile" />
     <File name="core/SASL/Response.cs" subtype="Code" buildaction="Compile" />
+    <File name="core/SASL/Success.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
